--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 p,
@@ -35,7 +35,7 @@ img {
 }
 
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -166,7 +166,7 @@ img {
   bottom: -1px;
   left: 0;
   right: 0;
-  content: "";
+  content: '';
 
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
@@ -233,12 +233,8 @@ img {
   height: 600px;
   margin-right: auto;
   margin-left: auto;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/hero.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/hero.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -322,6 +318,7 @@ img {
 
   width: 528px;
   height: 581px;
+  padding: 40px;
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -337,12 +334,66 @@ img {
   top: 8px;
   right: 8px;
 
+  display: inline-flex;
+  align-items: center;
   width: 30px;
   height: 30px;
 
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  color: var(--accent-color);
+}
+
+.modal-close:focus,
+.modal-close:hover {
+  fill: currentColor;
+}
+
+.modal-slogan {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-title-color);
+}
+
+.modal-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.modal-label-name {
+  display: block;
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: var(--main-text-color);
+}
+
+.modal-input-text {
+  padding-left: 42px;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.modal-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
 }
 
 /* ----------ABOUT-US---------- */
@@ -642,6 +693,8 @@ img {
 }
 
 .footer-subscribe-button {
+  display: inline-flex;
+  align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 29px;
@@ -656,6 +709,16 @@ img {
 
   color: #ffffff;
   background-color: var(--accent-color);
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+  background-color: #188ce8;
+}
+
+.footer-subscribe-icon {
+  fill: currentColor;
+  margin-left: 10px;
 }
 
 /* ----------PORTFOLIO---------- */
